--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Build on Windows
         if: matrix.os == 'windows-latest'
-        run: cl fbt.cpp /Fe:fbt.exe
+        run: cl fbt.cpp -O2 /std:c++20 /EHsc /Fe:fbt.exe
 
       - name: Archive binaries
         run: |
