--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -83,6 +83,8 @@ jobs:
           asset_path: release/linux/fbt
           asset_name: fbt
           asset_content_type: application/octet-stream
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Windows asset
         uses: actions/upload-release-asset@v1
@@ -91,3 +93,5 @@ jobs:
           asset_path: release/windows/fbt.exe
           asset_name: fbt.exe
           asset_content_type: application/octet-stream
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
