--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -16,30 +16,38 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up dependencies (Ubuntu)
+      # ---------- LINUX ----------
+      - name: Set up build dependencies (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get update && sudo apt-get install -y build-essential
+        run: sudo apt-get update && sudo apt-get install -y build-essential make gcc
 
+      - name: Build on Ubuntu
+        if: matrix.os == 'ubuntu-latest'
+        run: make release
+        shell: bash
+
+      # ---------- WINDOWS ----------
       - name: Set up MSVC environment (Windows)
         if: matrix.os == 'windows-latest'
         uses: ilammy/msvc-dev-cmd@v1
 
-      - name: Build on Ubuntu
-        if: matrix.os == 'ubuntu-latest'
-        run: g++ fbt.cpp -O3 -o fbt -std=c++23
-        shell: bash
+      - name: Install Make (Windows)
+        if: matrix.os == 'windows-latest'
+        run: choco install make -y
 
       - name: Build on Windows
         if: matrix.os == 'windows-latest'
-        run: cl fbt.cpp /std:c++23 /EHsc /Fe:fbt.exe -O3
+        run: make release
+        shell: bash
 
+      # ---------- PACKAGE ----------
       - name: Archive binaries
         run: |
           mkdir -p release
           if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
-            mv fbt release/fbt
+            mv build/fbt release/fbt
           else
-            mv fbt.exe release/fbt.exe
+            mv build/fbt.exe release/fbt.exe
           fi
         shell: bash
 
@@ -53,12 +61,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Download artifacts
+      - name: Download Linux artifact
         uses: actions/download-artifact@v3
         with:
           name: ubuntu-latest-fbt
           path: release/linux
-      - uses: actions/download-artifact@v3
+
+      - name: Download Windows artifact
+        uses: actions/download-artifact@v3
         with:
           name: windows-latest-fbt
           path: release/windows
@@ -67,12 +77,10 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: "v0.${{ github.run_id }}"
-          release_name: "CLI Release v0.${{ github.run_id }}"
-          draft: false
-          prerelease: false
+          tag_name: "v0.${{ github.run_number }}"
+          release_name: "CLI Release v0.${{ github.run_number }}"
           body: |
-            Automatic release for CLI version v0.${{ github.run_id }}
+            Automatic release for CLI version v0.${{ github.run_number }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
